<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a54961.lvxinjingnang.Main2Activity">

    <ToggleButton
        android:id="@+id/tb"
        android:layout_gravity="bottom|start"
        android:textOn="@string/SiteMap"
        android:textOff="@string/Map"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/textview"
        android:visibility="gone"
        android:layout_gravity="bottom|start"
        android:id="@+id/location_errInfo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/gps_radio_group"
        android:layout_gravity="top|start"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/gps_locate_button"
            android:checked="true"
            android:text="@string/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/gps_follow_button"
            android:text="@string/Follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/gps_rotate_button"
            android:text="@string/_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</FrameLayout>
